cmake_minimum_required(VERSION 3.8)
project(hw1_pkg)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)
find_package(custom_interfaces REQUIRED)
include_directories(include/hw1_pkg)
Include_directories(
${custom_msg_interface_INCLUDE_DIRS}
)
add_executable(publisher src/publish_node.cpp src/hw1.cpp)
add_executable(subscriber src/subscribe_node.cpp src/hw1.cpp)
ament_target_dependencies(publisher rclcpp std_msgs custom_interfaces)
ament_target_dependencies(subscriber rclcpp std_msgs custom_interfaces)
install(TARGETS
  publisher
  subscriber
  DESTINATION lib/${PROJECT_NAME}
)
if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
